--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>Hello Worl!</h1>
+<div><img src="https://via.placeholder.com/150x50" alt="hello world from space"/></div>
 <p>This is my first file in my Git Repo.</p>
 <p>A new line in our file!</p>
 
