added new image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div><img src="https://via.placeholder.com/150x50" alt="hello world from space"/></div>
 <p>This is my first file in my Git Repo.</p>
 <p>A new line in our file!</p>
+<div><img src="https://via.placeholder.com/200x100" alt="hello"/></div>
 
 </body>
 </html>
