--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="ko">
 <head>
+<meta charset="utf-8"/>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css"/>
 </head>
